Fix spacing for code blocks

--- a/src/templates/styles/post.module.sass
+++ b/src/templates/styles/post.module.sass
@@ -6,6 +6,10 @@
   em
     text-decoration: underline
 
+  pre[class*="language-"]
+    margin-bottom: base-height(2)
+    line-height: 1em
+
   code[class*="language-"]
     font-size: $font-inline-code
 
